# frontdesk-AI-Receptionist

./: .env.local  README.md  agent.py  app.py  db.py  db.sqlite  pyproject.toml
templates/: 404.html  index.html  resolve.html
